# cookiecutter-flask-microservice

./: .travis.yml  Pipfile  README.md  cookiecutter.json
.travis/: test-service.sh
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .gitignore  .travis-covrc  .travis.yml  Dockerfile  Dockerfile.libc  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  dev-requirements.in  dev-requirements.txt  docker-compose.yml  gunicorn.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/deployment/: deployment.yml  ingress.yml  service.yml
{{cookiecutter.project_slug}}/requirements/: README  requirements.in
{{cookiecutter.project_slug}}/scripts/: copy_pipenv_lockfile.sh  deploy.sh  push_to_hub.sh  verify_license_headers.sh
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_module}}/: __init__.py  app.py  errorhandlers.py  resources.py  schemas.py  settings.py  wsgi.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_app.py  test_integration.py
{{cookiecutter.project_slug}}/tests/integration/: test_endpoints.py  test_openapi_docs.py
{{cookiecutter.project_slug}}/tests/unit/: __init__.py  test_app.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_module}}/: app.py  resources.py  settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  app.py  resources.py  settings.py  wsgi.py
