[metadata]
name = {{cookiecutter.project_slug}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.6
license = Apache Software License Version 2.0
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
{{cookiecutter.project_module}} =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
ignore =
    D100
    D101
    D102
    D103
    D104
    D105
    D106
    D107
    D202
    E203
    W503
exclude =
    __init__.py
    docs

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[pydocstyle]
match_dir = src/{{cookiecutter.project_module}}

[isort]
line_length = 88
indent = 4
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
